# opend6-tools

./: .coverage  .gitignore  Makefile  README.rst  index.html  pyproject.toml
cookiecutter-opend6-book/: README  cookiecutter.json
cookiecutter-opend6-book/{{cookiecutter.package_name}}/: Makefile  OGL.rst  README  conf.py  index.html  index.rst
cookiecutter-opend6-book/{{cookiecutter.package_name}}/characters/: Makefile
cookiecutter-opend6-book/{{cookiecutter.package_name}}/items/: Makefile
cookiecutter-opend6-book/{{cookiecutter.package_name}}/notebooks/: README  template_character.ipynb  template_spells.ipynb
cookiecutter-opend6-book/{{cookiecutter.package_name}}/spells/: Makefile
docs/: applications.rst  architecture.rst  aspect.puml  computations.rst  conf.py  index.html  index.rst  installation.rst  magic2.rst
docs/_build/coverage/: python.txt  undoc.pickle
docs/_build/doctest/: output.txt
docs/_build/doctrees/: architecture.doctree  character.doctree  computations.doctree  environment.pickle  index.doctree  installation.doctree  magic2.doctree  notebook_extract.doctree  notes.doctree  overview.doctree  parsers.doctree  tutorial.doctree  usage.doctree
docs/_build/doctrees/appendices/: index.doctree  parsers.doctree
docs/_build/doctrees/tutorial/: define_characters.doctree  define_spells.doctree  index.doctree  installing_software.doctree  opend6_tools.doctree  start_writing.doctree
docs/_build/html/: applications.html  architecture.html  character.html  commands.html  computations.html  genindex.html  index.html  installation.html  magic2.html  notebook_extract.html  notes.html  objects.inv  overview.html  parsers.html  py-modindex.html  search.html  searchindex.js  tutorial.html  usage.html
docs/_build/html/_modules/: character.html  die_simplification.html  functools.html  index.html  logging.html  magic2.html  spell_measure.html  textwrap.html
docs/_build/html/_modules/opend6_tools/: character.html  dice.html  die_simplification.html  magic2.html  notebook_extract.html  spell_measure.html
docs/_build/html/_sources/: applications.rst.txt  architecture.rst.txt  character.rst.txt  commands.rst.txt  index.rst.txt  installation.rst.txt  magic2.rst.txt  notebook_extract.rst.txt  notes.rst.txt  overview.rst.txt  parsers.rst.txt  tutorial.rst.txt  usage.rst.txt
docs/_build/html/_sources/appendices/: index.rst.txt  parsers.rst.txt
docs/_build/html/_sources/notes/: dsl_design.rst.txt  source_extraction.rst.txt
docs/_build/html/_sources/reference/: dice.rst.txt  index.rst.txt  magic2.rst.txt  notebook_extract.rst.txt
docs/_build/html/_sources/tutorial/: index.rst.txt  (+2 more)
docs/_build/html/_static/: documentation_options.js
docs/_build/html/appendices/: index.html  parsers.html
docs/_build/html/notes/: dsl_design.html  index.html  source_extraction.html
docs/_build/html/reference/: character.html  computations.html  dice.html  index.html  magic.html  magic2.html  notebook_extract.html
docs/_build/html/tutorial/: define_characters.html  define_spells.html  index.html  installing_software.html  opend6_tools.html  start_writing.html
docs/demo/: first_spell.py
docs/notes/: index.rst
docs/reference/: character.rst  computations.rst  dice.rst  index.rst  magic2.rst
docs/tutorial/: define_characters.rst  define_spells.rst  index.rst  installing_software.rst  opend6_tools.rst
extract/: README.md  download.py  magic1.py  magic1_migrate.py  parse_equipment.py  parse_fwb_spells.py  parse_fwn_spells.py  parse_spells_d6p.py  parse_spells_fantasy.py  parse_spells_mg.py  pdf_scrape.py
notebooks/: analyze_effects.ipynb  analyze_magic.py  area_effect_computations.ipynb  area_effect_computations.rst  area_effect_shapes.csv  check_skills.ipynb  equiprob_d6.ipynb  make_spell_tests.ipynb  template_spells.ipynb
notebooks/.ipynb_checkpoints/: area_effect_computations-checkpoint.ipynb
src/: pdf_scrape.py
src/opend6_tools/: __init__.py  analyze_magic.py  character.py  dice.py  die_simplification.py  magic2.py  notebook_extract.py  spell_measure.py
src/opend6_tools/character/: __init__.py  __main__.py  cli.py  features.py  monsterbook.py  output.py  workbook.py
src/opend6_tools/magic/: __init__.py  output.py  spellbook.py  spells.py  workbook.py
tests/: character1.html  character2.html  character2.tex  character3.html  test_character.py  test_character_cli.py  test_character_monsterbook.py  test_character_output.py  test_character_workbook.py  test_dice.py  test_die_simplification.py  test_magic2.py  test_magic2_dice.py  test_magic2_items.py  test_magic2_output.py  test_magic2_spellbook.py  test_magic2_spells.py  test_magic2_workbook.py  test_notebook_extract.py  test_spell_measure.py
(+14 files in other folders)
