[project]
name = "opend6-tools"
version = "2025.12.20.dev2"
description = "Tools to support designing spells and characters in OpenD6 games"
readme = "README.rst"
authors = [
    { name = "S.Lott", email = "slott56@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "humre>=1.0.0",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pypdf>=5.9.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "typer>=0.19.2",
]

[project.optional-dependencies]
dev = [
    "tox",
    "sphinx",
    "sphinxcontrib-plantuml>=0.31",
    "sphinxnotes-strike>=1.2.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pyright",
]


[project.scripts]
analyze_magic = "opend6_tools.analyze_magic:main"
die_simplification = "opend6_tools.die_simplification:main"
spell_measure = "opend6_tools.spell_measure:main"
notebook_extract = "opend6_tools.notebook_extract:app"
character_sheet = "opend6_tools.character:main"


[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.tox]
requires = ["tox>=4.19"]
env_list = ["3.12", "3.13", "3.14"]  # , "3.15"]
skip_missing_interpreters = true

[tool.tox.env_run_base]
# TODO: Add Coverage
description = "Run test under {base_python}"
deps = ["pytest"]
commands = [
    ["pytest", "--doctest-modules", "src/opend6_tools"],
    ["pytest", "-vv", "tests"],
]

[tool.tox.env.type_mypy]
# .tox/type/lib/python3.13/site-packages/humre/__init__.py:15: error: Invalid syntax  [syntax]
description = "run mypy type check on code base"
deps = ["mypy", "types-cachetools>=5.5.0.20240820", "types-chardet>=5.0.4.6"]
commands = [
    ["mypy", "--follow-untyped-imports", "src/opend6_tools"],
]

[tool.tox.env.type]
description = "run pyright type check on code base"
deps = ["pyright", "types-cachetools>=5.5.0.20240820", "types-chardet>=5.0.4.6"]
commands = [
    ["pyright", "src/opend6_tools"],
]

